--- a/src/main/resources/assets/bambooblocks/lang/lol_aa.json
+++ b/src/main/resources/assets/bambooblocks/lang/lol_aa.json
@@ -9,7 +9,7 @@
   "block.bambooblocks.bamboo_trapdoor": "Green Trap",
   "block.bambooblocks.bamboo_button": "Green Button",
   "block.bambooblocks.bamboo_pressure_plate": "Green Prseure Pleitz",
-  "block.bambooblocks.thatch": "Catnip",
-  "block.bambooblocks.thatch_stairs": "Catnip Stairz",
-  "block.bambooblocks.thatch_slab": "Catnip Sleb"
+  "block.bambooblocks.reed_thatch": "BAMBOOO Catnip",
+  "block.bambooblocks.reed_thatch_stairs": "BAMBOOO Catnip Stairz",
+  "block.bambooblocks.reed_thatch_slab": "BAMBOOO Catnip Sleb"
 }
