--- a/src/main/resources/assets/bambooblocks/lang/ru_ru.json
+++ b/src/main/resources/assets/bambooblocks/lang/ru_ru.json
@@ -9,7 +9,7 @@
   "block.bambooblocks.bamboo_trapdoor": "Бамбуковый Люк",
   "block.bambooblocks.bamboo_button": "Бамбуковая Кнопка",
   "block.bambooblocks.bamboo_pressure_plate": "Нажимная Пластина",
-  "block.bambooblocks.thatch": "Солома",
-  "block.bambooblocks.thatch_stairs": "Соломенные Ступеньки",
-  "block.bambooblocks.thatch_slab": "Соломенная Плита"
+  "block.bambooblocks.reed_thatch": "Солома",
+  "block.bambooblocks.reed_thatch_stairs": "Соломенные Ступеньки",
+  "block.bambooblocks.reed_thatch_slab": "Соломенная Плита"
 }
