Bamboo Ladder Fix
-bamboo ladder now matches quark model

--- a/src/main/resources/assets/bambooblocks/lang/en_us.json
+++ b/src/main/resources/assets/bambooblocks/lang/en_us.json
@@ -11,5 +11,6 @@
   "block.bambooblocks.bamboo_pressure_plate": "Bamboo Pressure Plate",
   "block.bambooblocks.reed_thatch": "Reed Thatch",
   "block.bambooblocks.reed_thatch_stairs": "Reed Thatch Stairs",
-  "block.bambooblocks.reed_thatch_slab": "Reed Thatch Slab"
+  "block.bambooblocks.reed_thatch_slab": "Reed Thatch Slab",
+  "block.bambooblocks.bamboo_ladder": "Bamboo Ladder"
 }
