--- a/src/main/resources/assets/bambooblocks/lang/en_us.json
+++ b/src/main/resources/assets/bambooblocks/lang/en_us.json
@@ -13,6 +13,7 @@
   "block.bambooblocks.reed_thatch_stairs": "Reed Thatch Stairs",
   "block.bambooblocks.reed_thatch_slab": "Reed Thatch Slab",
   "block.bambooblocks.bamboo_ladder": "Bamboo Ladder",
+  "block.bambooblocks.vertical_bamboo_planks": "Vertical Bamboo Planks",
 
   "item.bambooblocks.bamboo_boat": "Bamboo Boat"
 }
