--- a/src/main/resources/assets/bambooblocks/lang/en_us.json
+++ b/src/main/resources/assets/bambooblocks/lang/en_us.json
@@ -14,6 +14,8 @@
   "block.bambooblocks.reed_thatch_slab": "Reed Thatch Slab",
   "block.bambooblocks.bamboo_ladder": "Bamboo Ladder",
   "block.bambooblocks.vertical_bamboo_planks": "Vertical Bamboo Planks",
+  "block.bambooblocks.bamboo_chest": "Bamboo Chest",
+  "block.bambooblocks.trapped_bamboo_chest": "Trapped Bamboo Chest",
 
   "item.bambooblocks.bamboo_boat": "Bamboo Boat"
 }
