Forge tags, vertical slabs, Chinese
-added Chinese translation
-added vertical slabs if quark is loaded
-added some forge tags

--- a/src/main/resources/assets/bambooblocks/lang/en_us.json
+++ b/src/main/resources/assets/bambooblocks/lang/en_us.json
@@ -16,6 +16,8 @@
   "block.bambooblocks.vertical_bamboo_planks": "Vertical Bamboo Planks",
   "block.bambooblocks.bamboo_chest": "Bamboo Chest",
   "block.bambooblocks.trapped_bamboo_chest": "Trapped Bamboo Chest",
+  "block.bambooblocks.vertical_bamboo_slab": "Vertical Bamboo Slab",
+  "block.bambooblocks.vertical_reed_thatch_slab": "Vertical Reed Thatch Slab",
 
   "item.bambooblocks.bamboo_boat": "Bamboo Boat"
 }
