bugfixes and server changes
-removed bamboo chests for now
-renamed vertical bamboo planks to horizontal
-updated tags

--- a/src/main/resources/assets/bambooblocks/lang/en_us.json
+++ b/src/main/resources/assets/bambooblocks/lang/en_us.json
@@ -13,7 +13,7 @@
   "block.bambooblocks.reed_thatch_stairs": "Reed Thatch Stairs",
   "block.bambooblocks.reed_thatch_slab": "Reed Thatch Slab",
   "block.bambooblocks.bamboo_ladder": "Bamboo Ladder",
-  "block.bambooblocks.vertical_bamboo_planks": "Vertical Bamboo Planks",
+  "block.bambooblocks.horizontal_bamboo_planks": "Horizontal Bamboo Planks",
   "block.bambooblocks.bamboo_chest": "Bamboo Chest",
   "block.bambooblocks.trapped_bamboo_chest": "Trapped Bamboo Chest",
   "block.bambooblocks.vertical_bamboo_slab": "Vertical Bamboo Slab",
