--- a/src/main/resources/assets/bambooblocks/lang/pl_pl.json
+++ b/src/main/resources/assets/bambooblocks/lang/pl_pl.json
@@ -13,7 +13,7 @@
   "block.bambooblocks.reed_thatch_stairs": "Schody z trzcinowego poszycia",
   "block.bambooblocks.reed_thatch_slab": "Płyta z trzcinowego poszycia",
   "block.bambooblocks.bamboo_ladder": "Bambusowa drabina",
-  "block.bambooblocks.vertical_bamboo_planks": "Pionowe bambusowe deski,
+  "block.bambooblocks.vertical_bamboo_planks": "Pionowe bambusowe deski",
   "block.bambooblocks.bamboo_chest": "Bambusowa skrzynia",
   "block.bambooblocks.trapped_bamboo_chest": "Bambusowa skrzynia pułapka",
   "block.bambooblocks.vertical_bamboo_slab": "Pionowa bambusowa płyta",
