--- a/src/main/resources/assets/bambooblocks/lang/ru_ru.json
+++ b/src/main/resources/assets/bambooblocks/lang/ru_ru.json
@@ -1,15 +1,23 @@
 {
-  "block.bambooblocks.bamboo_torch": "Бамбуковый Факел",
+  "block.bambooblocks.bamboo_torch": "Бамбуковый факел",
   "block.bambooblocks.bamboo_planks": "Бамбуковые доски",
-  "block.bambooblocks.bamboo_stairs": "Бамбуковые Ступеньки",
-  "block.bambooblocks.bamboo_slab": "Бамбуковая Плита",
-  "block.bambooblocks.bamboo_fence": "Бамбуковый Забор",
-  "block.bambooblocks.bamboo_fence_gate": "Бамбуковая Калитка",
-  "block.bambooblocks.bamboo_door": "Бамбуковая Дверь",
-  "block.bambooblocks.bamboo_trapdoor": "Бамбуковый Люк",
-  "block.bambooblocks.bamboo_button": "Бамбуковая Кнопка",
-  "block.bambooblocks.bamboo_pressure_plate": "Нажимная Пластина",
+  "block.bambooblocks.bamboo_stairs": "Бамбуковые ступеньки",
+  "block.bambooblocks.bamboo_slab": "Бамбуковая плита",
+  "block.bambooblocks.bamboo_fence": "Бамбуковый забор",
+  "block.bambooblocks.bamboo_fence_gate": "Бамбуковая калитка",
+  "block.bambooblocks.bamboo_door": "Бамбуковая дверь",
+  "block.bambooblocks.bamboo_trapdoor": "Бамбуковый люк",
+  "block.bambooblocks.bamboo_button": "Бамбуковая кнопка",
+  "block.bambooblocks.bamboo_pressure_plate": "Нажимная пластина",
   "block.bambooblocks.reed_thatch": "Солома",
-  "block.bambooblocks.reed_thatch_stairs": "Соломенные Ступеньки",
-  "block.bambooblocks.reed_thatch_slab": "Соломенная Плита"
+  "block.bambooblocks.reed_thatch_stairs": "Соломенные ступеньки",
+  "block.bambooblocks.reed_thatch_slab": "Соломенная плита",
+  "block.bambooblocks.bamboo_ladder": "Бамбуковая лестница",
+  "block.bambooblocks.horizontal_bamboo_planks": "Горизотнальные бамбуковые доски",
+  "block.bambooblocks.bamboo_chest": "Бамбуковый сундук",
+  "block.bambooblocks.trapped_bamboo_chest": "Бумбуковый сундук-ловушка",
+  "block.bambooblocks.vertical_bamboo_slab": "Вертикальная бамбуковая плита",
+  "block.bambooblocks.vertical_reed_thatch_slab": "Вертикальная соломенная плита",
+
+  "item.bambooblocks.bamboo_boat": "Бамбуковая лодка"
 }
