Added Bookshelves + Bug Fixes

--- a/src/main/resources/assets/bambooblocks/lang/en_us.json
+++ b/src/main/resources/assets/bambooblocks/lang/en_us.json
@@ -18,6 +18,7 @@
   "block.bambooblocks.trapped_bamboo_chest": "Trapped Bamboo Chest",
   "block.bambooblocks.vertical_bamboo_slab": "Vertical Bamboo Slab",
   "block.bambooblocks.vertical_reed_thatch_slab": "Vertical Reed Thatch Slab",
+  "block.bambooblocks.bamboo_bookshelf": "Bamboo Bookshelf",
 
   "item.bambooblocks.bamboo_boat": "Bamboo Boat"
 }
