--- a/src/main/resources/assets/bambooblocks/lang/es_es.json
+++ b/src/main/resources/assets/bambooblocks/lang/es_es.json
@@ -1,15 +1,24 @@
 {
-  "block.bambooblocks.bamboo_torch": "Antorcha de Bambú",
-  "block.bambooblocks.bamboo_planks": "Madera de Bambú",
-  "block.bambooblocks.bamboo_stairs": "Escaleras de Bambú",
-  "block.bambooblocks.bamboo_slab": "Losa de Bambú",
-  "block.bambooblocks.bamboo_fence": "Valla de Bambú",
-  "block.bambooblocks.bamboo_fence_gate": "Puerta de valla de Bambú",
-  "block.bambooblocks.bamboo_door": "Puerta de Bambú",
-  "block.bambooblocks.bamboo_trapdoor": "Trampilla de Bambú",
-  "block.bambooblocks.bamboo_button": "Botón de Bambú",
-  "block.bambooblocks.bamboo_pressure_plate": "Placa de presión de Bambú",
-  "block.bambooblocks.reed_thatch": "Paja",
-  "block.bambooblocks.reed_thatch_stairs": "Escalera de Paja",
-  "block.bambooblocks.reed_thatch_slab": "Losa de Paja"
+  "block.bambooblocks.bamboo_torch": "Antorcha de bambú",
+  "block.bambooblocks.bamboo_planks": "Madera de bambú",
+  "block.bambooblocks.bamboo_stairs": "Escaleras de bambú",
+  "block.bambooblocks.bamboo_slab": "Losa de bambú",
+  "block.bambooblocks.bamboo_fence": "Valla de bambú",
+  "block.bambooblocks.bamboo_fence_gate": "Puerta de valla de bambú",
+  "block.bambooblocks.bamboo_door": "Puerta de bambú",
+  "block.bambooblocks.bamboo_trapdoor": "Trampilla de bambú",
+  "block.bambooblocks.bamboo_button": "Botón de bambú",
+  "block.bambooblocks.bamboo_pressure_plate": "Placa de presión de bambú",
+  "block.bambooblocks.reed_thatch": "Paja de junco",
+  "block.bambooblocks.reed_thatch_stairs": "Escaleras de paja de junco",
+  "block.bambooblocks.reed_thatch_slab": "Losa de paja de junco",
+  "block.bambooblocks.bamboo_ladder": "Escalera de mano de bambú",
+  "block.bambooblocks.horizontal_bamboo_planks": "Madera horizontal de bambú",
+  "block.bambooblocks.bamboo_chest": "Cofre de bambú",
+  "block.bambooblocks.trapped_bamboo_chest": "Cofre trampa de bambú",
+  "block.bambooblocks.bamboo_vertical_slab": "Losa vertical de bambú",
+  "block.bambooblocks.reed_thatch_vertical_slab": "Losa vertical de paja de junco",
+  "block.bambooblocks.bamboo_bookshelf": "Librería de bambú",
+
+  "item.bambooblocks.bamboo_boat": "Barca de bambú"
 }
