--- a/src/main/resources/assets/bambooblocks/lang/fi_fi.json
+++ b/src/main/resources/assets/bambooblocks/lang/fi_fi.json
@@ -1,14 +1,14 @@
 {
-  "block.bambooblocks.bamboo_torch": "Bambusoihti",
+  "block.bambooblocks.bamboo_torch": "Bambusoihtu",
   "block.bambooblocks.bamboo_planks": "Bambulankut",
   "block.bambooblocks.bamboo_stairs": "Bambuportaat",
   "block.bambooblocks.bamboo_slab": "Bambulaatta",
   "block.bambooblocks.bamboo_fence": "Bambuaita",
   "block.bambooblocks.bamboo_fence_gate": "Babmbuportti",
-  "block.bambooblocks.bamboo_door": "Babmbuovi",
-  "block.bambooblocks.bamboo_trapdoor": "Babmbuluukku",
-  "block.bambooblocks.bamboo_button": "Babmbunappi",
-  "block.bambooblocks.bamboo_pressure_plate": "Babmbupainelaatta",
+  "block.bambooblocks.bamboo_door": "Bambuovi",
+  "block.bambooblocks.bamboo_trapdoor": "Bambuluukku",
+  "block.bambooblocks.bamboo_button": "Bambunappi",
+  "block.bambooblocks.bamboo_pressure_plate": "Bambupainelaatta",
   "block.bambooblocks.reed_thatch": "Ruokokuutio",
   "block.bambooblocks.reed_thatch_stairs": "Ruokoportaat",
   "block.bambooblocks.reed_thatch_slab": "Ruokolaatta",
@@ -17,7 +17,7 @@
   "block.bambooblocks.bamboo_chest": "Bambuarkku",
   "block.bambooblocks.trapped_bamboo_chest": "Ansoitettu bambuarkku",
   "block.bambooblocks.bamboo_vertical_slab": "Pystysuora bambulaatta",
-  "block.bambooblocks.reed_thatch_vertical_slab": "Pysysuora ruokolaatta",
+  "block.bambooblocks.reed_thatch_vertical_slab": "Pystysuora ruokolaatta",
   "block.bambooblocks.bamboo_bookshelf": "Bambukirjahylly",
 
   "item.bambooblocks.bamboo_boat": "Bambuvene"
