Fixed a typo in fi_fi.json

--- a/src/main/resources/assets/bambooblocks/lang/fi_fi.json
+++ b/src/main/resources/assets/bambooblocks/lang/fi_fi.json
@@ -4,7 +4,7 @@
   "block.bambooblocks.bamboo_stairs": "Bambuportaat",
   "block.bambooblocks.bamboo_slab": "Bambulaatta",
   "block.bambooblocks.bamboo_fence": "Bambuaita",
-  "block.bambooblocks.bamboo_fence_gate": "Babmbuportti",
+  "block.bambooblocks.bamboo_fence_gate": "Bambuportti",
   "block.bambooblocks.bamboo_door": "Bambuovi",
   "block.bambooblocks.bamboo_trapdoor": "Bambuluukku",
   "block.bambooblocks.bamboo_button": "Bambunappi",
