--- a/src/main/resources/assets/bambooblocks/lang/en_us.json
+++ b/src/main/resources/assets/bambooblocks/lang/en_us.json
@@ -14,11 +14,11 @@
   "block.bambooblocks.reed_thatch_slab": "Reed Thatch Slab",
   "block.bambooblocks.bamboo_ladder": "Bamboo Ladder",
   "block.bambooblocks.horizontal_bamboo_planks": "Horizontal Bamboo Planks",
-  "block.bambooblocks.bamboo_chest": "Bamboo Chest",
   "block.bambooblocks.trapped_bamboo_chest": "Trapped Bamboo Chest",
-  "block.bambooblocks.bamboo_vertical_slab": "Vertical Bamboo Slab",
-  "block.bambooblocks.reed_thatch_vertical_slab": "Vertical Reed Thatch Slab",
+  "block.bambooblocks.bamboo_vertical_slab": "Bamboo Vertical Slab",
+  "block.bambooblocks.reed_thatch_vertical_slab": "Reed Thatch Vertical Slab",
   "block.bambooblocks.bamboo_bookshelf": "Bamboo Bookshelf",
+  "block.bambooblocks.bamboo_sign": "Bamboo Sign",
 
   "item.bambooblocks.bamboo_boat": "Bamboo Boat"
 }
