--- a/src/main/resources/assets/bambooblocks/lang/es_ar.json
+++ b/src/main/resources/assets/bambooblocks/lang/es_ar.json
@@ -9,16 +9,16 @@
   "block.bambooblocks.bamboo_trapdoor": "Escotilla de bambú",
   "block.bambooblocks.bamboo_button": "Botón de bambú",
   "block.bambooblocks.bamboo_pressure_plate": "Placa de presión de bambú",
-  "block.bambooblocks.reed_thatch": "Paja de junco",
-  "block.bambooblocks.reed_thatch_stairs": "Escaleras de paja de junco",
-  "block.bambooblocks.reed_thatch_slab": "Baldosa de paja de junco",
+  "block.bambooblocks.reed_thatch": "Cubierta de cañas",
+  "block.bambooblocks.reed_thatch_stairs": "Escaleras de cañas",
+  "block.bambooblocks.reed_thatch_slab": "Baldosa de cañas",
   "block.bambooblocks.bamboo_ladder": "Escalera de bambú",
   "block.bambooblocks.horizontal_bamboo_planks": "Madera horizontal de bambú",
-  "block.bambooblocks.bamboo_chest": "Cofre de bambú",
   "block.bambooblocks.trapped_bamboo_chest": "Cofre con trampa de bambú",
   "block.bambooblocks.bamboo_vertical_slab": "Baldosa vertical de bambú",
-  "block.bambooblocks.reed_thatch_vertical_slab": "Baldosa vertical de paja de junco",
+  "block.bambooblocks.reed_thatch_vertical_slab": "Baldosa vertical de cañas",
   "block.bambooblocks.bamboo_bookshelf": "Biblioteca de bambú",
+  "block.bambooblocks.bamboo_sign": "Cartel de bambú",
 
   "item.bambooblocks.bamboo_boat": "Bote de bambú"
 }
