--- a/src/main/resources/assets/bamboo_blocks/lang/es_ar.json
+++ b/src/main/resources/assets/bamboo_blocks/lang/es_ar.json
@@ -18,7 +18,12 @@
   "block.bamboo_blocks.bamboo_vertical_slab": "Baldosa vertical de bambú",
   "block.bamboo_blocks.reed_thatch_vertical_slab": "Baldosa vertical de cañas",
   "block.bamboo_blocks.bamboo_bookshelf": "Biblioteca de bambú",
+
   "block.bamboo_blocks.bamboo_sign": "Cartel de bambú",
+  "block.bamboo_blocks.bamboo_wall_sign": "Cartel de bambú en pared",
+  
+  "block.bamboo_blocks.bamboo_chest": "Cofre de bambú",
+  "block.bamboo_blocks.bamboo_trapped_chest": "Cofre con trampa de bambú",
 
   "item.bamboo_blocks.bamboo_boat": "Bote de bambú"
 }
