--- a/src/main/resources/assets/bamboo_blocks/lang/en_pt.json
+++ b/src/main/resources/assets/bamboo_blocks/lang/en_pt.json
@@ -1,15 +1,29 @@
 {
-  "block.bamboo_blocks.bamboo_torch": "Bambarr Torch",
+  "block.bamboo_blocks.bamboo_torch": "Bambarrr Torch",
   "block.bamboo_blocks.bamboo_planks": "Planks o' Bambarr",
-  "block.bamboo_blocks.bamboo_stairs": "Stairs o' Bambarr",
-  "block.bamboo_blocks.bamboo_slab": "Slab o' Bambarr",
+  "block.bamboo_blocks.bamboo_stairs": "Stairs o' Bambar",
+  "block.bamboo_blocks.bamboo_slab": "Slab o' Bambarrrr",
   "block.bamboo_blocks.bamboo_fence": "Picket o' Bambarr",
-  "block.bamboo_blocks.bamboo_fence_gate": "Picket Gate o' Bambarr",
-  "block.bamboo_blocks.bamboo_door": "Door o' Bambarr",
+  "block.bamboo_blocks.bamboo_fence_gate": "Picket Gate o' Bambar",
+  "block.bamboo_blocks.bamboo_door": "Door o' Bambarrr",
   "block.bamboo_blocks.bamboo_trapdoor": "Hatch o' Bambarr",
-  "block.bamboo_blocks.bamboo_button": "Knob o' Bambarr",
+  "block.bamboo_blocks.bamboo_button": "Knob o' Bambarrr",
   "block.bamboo_blocks.bamboo_pressure_plate": "Bambarr Booby Trap",
-  "block.bamboo_blocks.reed_thatch": "Reed Thatch",
-  "block.bamboo_blocks.reed_thatch_stairs": "Stairs o' Reed Thatch",
-  "block.bamboo_blocks.reed_thatch_slab": "Slab o' Reed Thatch"
+  "block.bamboo_blocks.reed_thatch": "Roof o' Reed",
+  "block.bamboo_blocks.reed_thatch_stairs": "Roof o' Reed Stairs",
+  "block.bamboo_blocks.reed_thatch_slab": "Roof o' Reed Slab",
+  "block.bamboo_blocks.bamboo_ladder": "Bambarr Climbin' Planks",
+  "block.bamboo_blocks.horizontal_bamboo_planks": "Tipsy Planks o' Bambarrr",
+  "block.bamboo_blocks.trapped_bamboo_chest": "Trapped Coffer o' Bambarr",
+  "block.bamboo_blocks.bamboo_vertical_slab": "Standin' Slab o' Bambarr",
+  "block.bamboo_blocks.reed_thatch_vertical_slab": "Roof o' Reed Standin' Slab",
+  "block.bamboo_blocks.bamboo_bookshelf": "Bambarr Shelv o' Knowledge",
+  
+  "block.bamboo_blocks.bamboo_sign": "Seal ov Bambarrrr",
+  "block.bamboo_blocks.bamboo_wall_sign": "Hung Seal ov Bambarr",
+  
+  "block.bamboo_blocks.bamboo_chest": "Coffer o' Bambarrr",
+  "block.bamboo_blocks.bamboo_trapped_chest": "Trapped Coffer o' Bambarr",
+
+  "item.bamboo_blocks.bamboo_boat": "Bambar'n Vessel"
 }
