--- a/src/main/resources/assets/bamboo_blocks/lang/en_us.json
+++ b/src/main/resources/assets/bamboo_blocks/lang/en_us.json
@@ -24,6 +24,8 @@
   
   "block.bamboo_blocks.bamboo_chest": "Bamboo Chest",
   "block.bamboo_blocks.bamboo_trapped_chest": "Bamboo Trapped Chest",
+  
+  "block.bamboo_blocks.bamboo_beehive": "Bamboo Beehive",
 
   "item.bamboo_blocks.bamboo_boat": "Bamboo Boat"
 }
