Renamed from Bamboo Soul Torch to Soul Bamboo Torch

--- a/src/main/resources/assets/bamboo_blocks/lang/en_us.json
+++ b/src/main/resources/assets/bamboo_blocks/lang/en_us.json
@@ -3,9 +3,9 @@
   "block.bamboo_blocks.bamboo_wall_torch": "Bamboo Wall Torch",
   "block.bamboo_blocks.potted_bamboo_torch": "Potted Bamboo Torch",
   
-  "block.bamboo_blocks.bamboo_soul_torch": "Bamboo Soul Torch",
-  "block.bamboo_blocks.bamboo_soul_wall_torch": "Bamboo Soul Wall Torch",
-  "block.bamboo_blocks.potted_bamboo_soul_torch": "Potted Bamboo Soul Torch",
+  "block.bamboo_blocks.soul_bamboo_torch": "Soul Bamboo Torch",
+  "block.bamboo_blocks.soul_bamboo_wall_torch": "Soul Bamboo Wall Torch",
+  "block.bamboo_blocks.potted_soul_bamboo_torch": "Potted Soul Bamboo Torch",
   
   "block.bamboo_blocks.bamboo_planks": "Bamboo Planks",
   "block.bamboo_blocks.bamboo_stairs": "Bamboo Stairs",
