--- a/src/main/resources/assets/bamboo_blocks/lang/de_de.json
+++ b/src/main/resources/assets/bamboo_blocks/lang/de_de.json
@@ -1,11 +1,11 @@
 {
   "block.bamboo_blocks.bamboo_torch": "Bambusfackel",
-  "block.bamboo_blocks.bamboo_wall_torch": "Bambusfackel",
-  "block.bamboo_blocks.potted_bamboo_torch": "Topfbambusfackel",
+  "block.bamboo_blocks.bamboo_wall_torch": "Bambuswandfackel",
+  "block.bamboo_blocks.potted_bamboo_torch": "Eingetopfte Bambusfackel",
   
   "block.bamboo_blocks.soul_bamboo_torch": "Bambusseelenfackel",
-  "block.bamboo_blocks.soul_bamboo_wall_torch": "Bambusseelenfackel",
-  "block.bamboo_blocks.potted_soul_bamboo_torch": "Topfbambusseelenfackel",
+  "block.bamboo_blocks.soul_bamboo_wall_torch": "Bambusseelenwandfackel",
+  "block.bamboo_blocks.potted_soul_bamboo_torch": "Eingetopfte Bambusseelenfackel",
   
   "block.bamboo_blocks.bamboo_planks": "Bambusbretter",
   "block.bamboo_blocks.bamboo_stairs": "Bambustreppe",
@@ -17,7 +17,7 @@
   "block.bamboo_blocks.bamboo_button": "Bambusknopf",
   "block.bamboo_blocks.bamboo_pressure_plate": "Bambusdruckplatte",
   "block.bamboo_blocks.bamboo_sign": "Bambusschild",
-  "block.bamboo_blocks.bamboo_wall_sign": "Bambusschild",
+  "block.bamboo_blocks.bamboo_wall_sign": "Bambuswandschild",
   "block.bamboo_blocks.bamboo_ladder": "Bambusleiter",
   "block.bamboo_blocks.horizontal_bamboo_planks": "Horizontale Bambusbretter",
   "block.bamboo_blocks.trapped_bamboo_chest": "Redstone-Bambustruhe",
@@ -27,7 +27,7 @@
   "block.bamboo_blocks.bamboo_trapped_chest": "Redstone-Bambustruhe",
   "block.bamboo_blocks.bamboo_beehive": "Bambusbienenstock",
   
-  "block.bamboo_blocks.reed_thatch": "Reet",
+  "block.bamboo_blocks.reed_thatch": "Reetblock",
   "block.bamboo_blocks.reed_thatch_stairs": "Reettreppe",
   "block.bamboo_blocks.reed_thatch_slab": "Reetstufe",
   "block.bamboo_blocks.reed_thatch_vertical_slab": "Vertikale Reetstufe",
