Edt es_ar.json, es_es.json, es_mx.json
Renamed thatch blocks for consistency

--- a/src/main/resources/assets/bamboo_blocks/lang/es_ar.json
+++ b/src/main/resources/assets/bamboo_blocks/lang/es_ar.json
@@ -16,14 +16,14 @@
   "block.bamboo_blocks.bamboo_trapdoor": "Escotilla de bambú",
   "block.bamboo_blocks.bamboo_button": "Botón de bambú",
   "block.bamboo_blocks.bamboo_pressure_plate": "Placa de presión de bambú",
-  "block.bamboo_blocks.reed_thatch": "Cubierta de cañas",
-  "block.bamboo_blocks.reed_thatch_stairs": "Escaleras de cañas",
-  "block.bamboo_blocks.reed_thatch_slab": "Baldosa de cañas",
+  "block.bamboo_blocks.reed_thatch": "Paja de caña",
+  "block.bamboo_blocks.reed_thatch_stairs": "Escaleras de paja de caña",
+  "block.bamboo_blocks.reed_thatch_slab": "Baldosa de paja de caña",
   "block.bamboo_blocks.bamboo_ladder": "Escalera de bambú",
   "block.bamboo_blocks.horizontal_bamboo_planks": "Madera horizontal de bambú",
   "block.bamboo_blocks.trapped_bamboo_chest": "Cofre con trampa de bambú",
   "block.bamboo_blocks.bamboo_vertical_slab": "Baldosa vertical de bambú",
-  "block.bamboo_blocks.reed_thatch_vertical_slab": "Baldosa vertical de cañas",
+  "block.bamboo_blocks.reed_thatch_vertical_slab": "Baldosa vertical de paja de caña",
   "block.bamboo_blocks.bamboo_bookshelf": "Biblioteca de bambú",
 
   "block.bamboo_blocks.bamboo_sign": "Cartel de bambú",
