--- a/src/main/resources/assets/bamboo_blocks/lang/es_es.json
+++ b/src/main/resources/assets/bamboo_blocks/lang/es_es.json
@@ -16,14 +16,14 @@
   "block.bamboo_blocks.bamboo_trapdoor": "Trampilla de bambú",
   "block.bamboo_blocks.bamboo_button": "Botón de bambú",
   "block.bamboo_blocks.bamboo_pressure_plate": "Placa de presión de bambú",
-  "block.bamboo_blocks.reed_thatch": "Cubierta de cañas",
-  "block.bamboo_blocks.reed_thatch_stairs": "Escaleras de cañas",
-  "block.bamboo_blocks.reed_thatch_slab": "Losa de cañas",
+  "block.bamboo_blocks.reed_thatch": "Paja de caña",
+  "block.bamboo_blocks.reed_thatch_stairs": "Escaleras de paja de caña",
+  "block.bamboo_blocks.reed_thatch_slab": "Losa de paja de caña",
   "block.bamboo_blocks.bamboo_ladder": "Escalera de mano de bambú",
   "block.bamboo_blocks.horizontal_bamboo_planks": "Madera horizontal de bambú",
   "block.bamboo_blocks.trapped_bamboo_chest": "Cofre trampa de bambú",
   "block.bamboo_blocks.bamboo_vertical_slab": "Losa vertical de bambú",
-  "block.bamboo_blocks.reed_thatch_vertical_slab": "Losa vertical de cañas",
+  "block.bamboo_blocks.reed_thatch_vertical_slab": "Losa vertical de paja de caña",
   "block.bamboo_blocks.bamboo_bookshelf": "Librería de bambú",
 
   "block.bamboo_blocks.bamboo_sign": "Cartel de bambú",
