--- a/src/main/resources/assets/bamboo_blocks/lang/fi_fi.json
+++ b/src/main/resources/assets/bamboo_blocks/lang/fi_fi.json
@@ -1,5 +1,16 @@
 {
   "block.bamboo_blocks.bamboo_torch": "Bambusoihtu",
+  "block.bamboo_blocks.bamboo_wall_torch": "Bambuseinäsoihtu",
+  "block.bamboo_blocks.potted_bamboo_torch": "Istutettu bambusoihtu",
+  
+  "block.bamboo_blocks.soul_bamboo_torch": "Sielubambusoihtu",
+  "block.bamboo_blocks.soul_bamboo_wall_torch": "Sielubambuseinäsoihtu",
+  "block.bamboo_blocks.potted_soul_bamboo_torch": "Istutettu sielubambusoihtu",
+  
+  "block.bamboo_blocks.ender_bamboo_torch": "Ender-bambusoihtu",
+  "block.bamboo_blocks.ender_bamboo_wall_torch": "Ender-bambuseinäsoihtu",
+  "block.bamboo_blocks.potted_ender_bamboo_torch": "Istutettu ender-bambusoihtu",
+  
   "block.bamboo_blocks.bamboo_planks": "Bambulankut",
   "block.bamboo_blocks.bamboo_stairs": "Bambuportaat",
   "block.bamboo_blocks.bamboo_slab": "Bambulaatta",
@@ -9,16 +20,21 @@
   "block.bamboo_blocks.bamboo_trapdoor": "Bambuluukku",
   "block.bamboo_blocks.bamboo_button": "Bambunappi",
   "block.bamboo_blocks.bamboo_pressure_plate": "Bambupainelaatta",
+  "block.bamboo_blocks.bamboo_sign": "Bamboo Sign",
+  "block.bamboo_blocks.bamboo_wall_sign": "Bamboo Wall Sign",
+  "block.bamboo_blocks.bamboo_ladder": "Bambutikas",
+  "block.bamboo_blocks.horizontal_bamboo_planks": "Pystysuorat bambulankut",
+  "block.bamboo_blocks.trapped_bamboo_chest": "Ansoitettu bambuarkku",
+  "block.bamboo_blocks.bamboo_vertical_slab": "Pystysuora bambulaatta",
+  "block.bamboo_blocks.bamboo_bookshelf": "Bambukirjahylly",
+  "block.bamboo_blocks.bamboo_chest": "Bambuarkku",
+  "block.bamboo_blocks.bamboo_trapped_chest": "Ansoitettu bambuarkku",
+  "block.bamboo_blocks.bamboo_beehive": "Bambumehiläispesä",
+  
   "block.bamboo_blocks.reed_thatch": "Ruokokuutio",
   "block.bamboo_blocks.reed_thatch_stairs": "Ruokoportaat",
   "block.bamboo_blocks.reed_thatch_slab": "Ruokolaatta",
-  "block.bamboo_blocks.bamboo_ladder": "Bambutikas",
-  "block.bamboo_blocks.horizontal_bamboo_planks": "Pystysuorat bambulankut",
-  "block.bamboo_blocks.bamboo_chest": "Bambuarkku",
-  "block.bamboo_blocks.trapped_bamboo_chest": "Ansoitettu bambuarkku",
-  "block.bamboo_blocks.bamboo_vertical_slab": "Pystysuora bambulaatta",
   "block.bamboo_blocks.reed_thatch_vertical_slab": "Pystysuora ruokolaatta",
-  "block.bamboo_blocks.bamboo_bookshelf": "Bambukirjahylly",
 
   "item.bamboo_blocks.bamboo_boat": "Bambuvene"
 }
