--- a/src/main/resources/assets/bamboo_blocks/lang/zh_cn.json
+++ b/src/main/resources/assets/bamboo_blocks/lang/zh_cn.json
@@ -17,7 +17,7 @@
   "block.bamboo_blocks.bamboo_fence": "竹栅栏",
   "block.bamboo_blocks.bamboo_fence_gate": "竹栅栏门",
   "block.bamboo_blocks.bamboo_door": "竹门",
-  "block.bamboo_blocks.bamboo_trapdoor": "竹陷阱门",
+  "block.bamboo_blocks.bamboo_trapdoor": "竹活板门",
   "block.bamboo_blocks.bamboo_button": "竹质按钮",
   "block.bamboo_blocks.bamboo_pressure_plate": "竹质压力板",
   "block.bamboo_blocks.bamboo_sign": "竹告示牌",
