--- a/src/main/resources/assets/bamboo_blocks/lang/zh_cn.json
+++ b/src/main/resources/assets/bamboo_blocks/lang/zh_cn.json
@@ -24,7 +24,7 @@
   "block.bamboo_blocks.bamboo_wall_sign": "墙上的竹告示牌",
   "block.bamboo_blocks.bamboo_ladder": "竹梯子",
   "block.bamboo_blocks.horizontal_bamboo_planks": "水平纹竹板",
-  "block.bamboo_blocks.trapped_bamboo_chest": "Trapped Bamboo Chest",
+  "block.bamboo_blocks.trapped_bamboo_chest": "Trapped Bamboo Chest（不被使用）",
   "block.bamboo_blocks.bamboo_vertical_slab": "竹垂直台阶",
   "block.bamboo_blocks.bamboo_bookshelf": "竹制书架",
   "block.bamboo_blocks.bamboo_chest": "竹制箱子",
